Add test settings to work in Django 1.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ env:
 install: pip install $DJANGO --use-mirrors
 
 # command to run tests
-script: django-admin.py test --pythonpath=src/shorturls/ --settings=testsettings
+script: django-admin.py test --pythonpath=src/ --settings=shorturls.testsettings
